# quickpage

./: .gitignore  README.md  pyproject.toml
quickpage/: __init__.py  quickpage.py
